--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>this is a test</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link>
+    <!-- Custom styles for this template -->
+    <link href="css/Stylesheet.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <style>
+    </style>
 </head>
 <body>
-    <button>Click me</button>
+    <button id="btn">Click me</button>
     <div></div>
+
+    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
